# sniffjoke

./: 0x602EEFA5  AUTHORS  BETATESTING  CMakeLists.txt  ChangeLog  EVIL-CHECK-THIS-WHITELIST-ERROR  INSTALL  Makefile.am  Makefile.in  NEWS  README  README-REALLY-NOW  README.md  TODO  aclocal.m4  autogen.sh  cmake_uninstall.cmake.in  configure  configure.ac  configure.in
sniffjoke-src/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  NetIO.cc  NetIO.h  Optional_DataDebug.cc  Optional_DataDebug.h  Packet.cc  Packet.h  PacketQueue.cc  PacketQueue.h  Process.cc  Process.h  README  SessionTrack.cc  SessionTrack.h  SessionTrackList.cc  SessionTrackList.h  SjConf.cc  SjConf.h  SjUtils.cc  SjUtils.h  TCPTrack.cc  TCPTrack.h  TTLFocus.cc  TTLFocus.h  TTLFocusList.cc  TTLFocusList.h  WebIO.cc  config.status  configure  configure.in  defines.h  main.cc  sniffjoke  sniffjoke.cc  (+5 more)
sniffjoke-src/.deps/: NetIO.Po  SjConf.Po  TCPTrack.Po  WebIO.Po  main.Po
sniffjoke-src/autom4te.cache/: output.0  requests  traces.0  traces.1
sniffjoke-src/doc/: Makefile  Makefile.am  Makefile.in  sniffjoke_info.html
src/: CMakeLists.txt  CODE-INFO.txt  DataDebug.cc  DataDebug.h  Debug.cc  Debug.h  HDRoptions.cc  HDRoptions.h  Hack.h  HackPacketPool.cc  HackPacketPool.h  HackPool.cc  HackPool.h  Makefile  Makefile.am  Makefile.in  NetIO.cc  NetIO.h  Packet.cc  Packet.h  PacketQueue.cc  PacketQueue.h  Process.cc  Process.h  README-src  SessionTrack.cc  SessionTrack.h  SniffJoke.cc  SniffJoke.h  TCPTrack.cc  TCPTrack.h  TTLFocus.cc  TTLFocus.h  TTLfocus.cc  TTLfocus.h  UserConf.cc  UserConf.h  Utils.h  config.h  config.h.in  (+23 more)
src/autotest/: CMakeLists.txt  Makefile.am  Makefile.in  README-about-install  __extract_line.sh  __restore_link.sh  sj-commit-results  sj-iptcpopt-probe  sniffjoke-autotest  sniffjoke-autotest.incomplete  sniffjoke-autotest.start  sniffjoke-iptcpopt  unusable-sj-autotest.sh
src/cli/: Makefile  Makefile.am  Makefile.in  SniffJokeCli.cc  SniffJokeCli.h  main.cc
src/cli/.deps/: SniffJokeCli.Po  main.Po
src/client/: CMakeLists.txt  Makefile.am  Makefile.in  SniffJokeCli.cc  SniffJokeCli.h  main.cc
src/hackpkts/: FakeDataAnticipation.cc  FakeDataPosticipation.cc  HackPacket.h  SjH__fake_close.cc  SjH__fake_close_fin.cc  SjH__fake_close_rst.cc  SjH__fake_data.cc  SjH__fake_data_anticipation.cc  SjH__fake_data_posticipation.cc  SjH__fake_seq.cc  SjH__fake_syn.cc  SjH__fake_zero_window.cc  SjH__shift_ack.cc  SjH__valid_rst_fake_seq.cc  SjH__zero_window.cc  sj_hackpkts.h
src/plugins/: CMakeLists.txt  Makefile.am  Makefile.in  PluginsList.txt
src/plugins/HDRoptions_probe/: CMakeLists.txt  HDRoptions_probe.cc  HDRoptions_probe_README.txt  Makefile.am  Makefile.in
src/plugins/badSync/: CMakeLists.txt  fake_seq.cc  fake_window.cc  shift_ack.cc
src/plugins/fake_close_fin/: CMakeLists.txt  Makefile.in  fake_close_fin.cc
src/plugins/fake_close_rst/: CMakeLists.txt  Makefile.in  fake_close_rst.cc
src/plugins/fake_data/: CMakeLists.txt  Makefile.am  Makefile.in  fake_data.cc
src/plugins/fake_fragment/: Makefile.am  Makefile.in  fake_fragment.cc
src/plugins/fake_segment/: Makefile.am  Makefile.in  fake_segment.cc
src/plugins/fake_seq/: CMakeLists.txt  Makefile.am  Makefile.in  fake_seq.cc
src/plugins/fake_syn/: CMakeLists.txt  Makefile.in  fake_syn.cc
src/plugins/fake_window/: CMakeLists.txt  Makefile.am  Makefile.in  fake_window.cc
src/plugins/fake_zero_window/: Makefile.in  fake_zero_window.cc
src/plugins/forcedClosing/: CMakeLists.txt  fake_close_fin.cc  fake_close_rst.cc  fake_syn.cc  valid_rst_fake_seq.cc
src/plugins/fragmentation/: CMakeLists.txt  Makefile.am  Makefile.in  fragmentation.cc
src/plugins/fragmentation_with_fake_data/: Makefile.am  Makefile.in  fragmentation_with_fake_data.cc
src/plugins/overlap_packet/: CMakeLists.txt  Makefile.am  Makefile.in  overlap_packet.cc
src/plugins/payldBreakin/: CMakeLists.txt  fake_data.cc  fragmentation.cc  overlap_packet.cc  segmentation.cc
src/plugins/scatter_packet/: INFO  Makefile.am  Makefile.in  scatter_packet.cc
src/plugins/segmentation/: CMakeLists.txt  Makefile.am  Makefile.in  segmentation.cc
src/plugins/shift_ack/: CMakeLists.txt  Makefile.in  shift_ack.cc
src/plugins/valid_rst_fake_seq/: CMakeLists.txt  Makefile.in  valid_rst_fake_seq.cc
src/service/: CMakeLists.txt  Debug.cc  Debug.h  HDRoptions.cc  HDRoptions.h  Hack.cc  Hack.h  HackPool.cc  HackPool.h  IPList.cc  IPList.h  IPTCPopt.cc  IPTCPopt.h  IPTCPoptApply.cc  IPTCPoptApply.h  IPTCPoptImpl.cc  IPTCPoptImpl.h  Makefile.am  Makefile.in  NetIO.cc  NetIO.h  OptionPool.cc  OptionPool.h  Packet.cc  Packet.h  PacketFilter.cc  PacketFilter.h  PacketQueue.cc  PacketQueue.h  Plugin.cc  Plugin.h  PluginPool.cc  PluginPool.h  PortConf.cc  PortConf.h  Process.cc  Process.h  Scramble.cc  Scramble.h  ScrambleImpl.cc  (+22 more)
src/srv/: Makefile  Makefile.am  Makefile.in
src/srv/core/: Debug.cc  Debug.h  HDRoptions.cc  Makefile  Makefile.in  NetIO.cc  NetIO.h  PacketQueue.cc  SniffJoke.cc  SniffJoke.h  TCPTrack.h  TTLFocus.cc  UserConf.cc  UserConf.h  hardcoded-defines.h  main.cc
src/srv/core/.deps/: Debug.Po  HDRoptions.Po  HackPool.Po  NetIO.Po  Packet.Po  PacketQueue.Po  Process.Po  SessionTrack.Po  SniffJoke.Po  TCPTrack.Po  TTLFocus.Po  UserConf.Po  main.Po
src/srv/hacks/: Makefile  Makefile.am  Makefile.in
src/srv/hacks/fake_close_fin/: Makefile  Makefile.am  Makefile.in  fake_close_fin.cc
src/srv/hacks/fake_close_rst/: Makefile  Makefile.am  Makefile.in  fake_close_rst.cc
swill-0.3-src/: Makefile  TODO  config.status  configure  configure.in
swill-0.3-src/Doc/: exec.html  index.html
swill-0.3-src/Examples/: Makefile  Makefile.in  sg.c
swill-0.3-src/Include/swill/: swill.h
swill-0.3-src/Misc/: fileheader  mkdist.py
swill-0.3-src/Paper/: swill-draft.ps  swillsc.ps
swill-0.3-src/Source/Objects/: Makefile  Makefile.in  fio.c  memory.c  string.c
swill-0.3-src/Source/SWILL/: Makefile  Makefile.in  handlers.c  sock.c  ssl.h  web.c
swill-0.3-src/Test/: swilltest.py
swill-0.3-src/msvc6/DLL/: swill.dsp
(+196 files in other folders)
