AC_INIT(sniffjoke)
PACKAGE_VERSION=`grep SW_VERSION\  ./src/sj_defines.h | cut -f2 -d"\"" | sed 's/ /-/g'`
AC_SUBST(PACKAGE_VERSION)
AM_INIT_AUTOMAKE(sniffjoke,$PACKAGE_VERSION)

AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADERS([src/config.h])

AC_PROG_CXX
AC_LANG_CPLUSPLUS
AC_PROG_INSTALL

AC_CHECK_HEADERS(cerrno,,exit 1)
AC_CHECK_HEADERS(csignal,,exit 1)
AC_CHECK_HEADERS(cstdarg,,exit 1)
AC_CHECK_HEADERS(cstdio,,exit 1)
AC_CHECK_HEADERS(cstdlib,,exit 1)
AC_CHECK_HEADERS(cstring,,exit 1)
AC_CHECK_HEADERS(ctime,,exit 1)
AC_CHECK_HEADERS(cctype,,exit 1)
AC_CHECK_HEADERS(map,,exit 1)
AC_CHECK_HEADERS(vector,,exit 1)
AC_CHECK_HEADERS(fcntl.h,,exit 1)
AC_CHECK_HEADERS(getopt.h,,exit 1)
AC_CHECK_HEADERS(grp.h,,exit 1)
AC_CHECK_HEADERS(poll.h,,exit 1)
AC_CHECK_HEADERS(pwd.h,,exit 1)
AC_CHECK_HEADERS(unistd.h,,exit 1)
AC_CHECK_HEADERS(wait.h,,exit 1)
AC_CHECK_HEADERS(arpa/inet.h,,exit 1)
AC_CHECK_HEADERS(linux/if_tun.h,,exit 1)
AC_CHECK_HEADERS(net/ethernet.h,,exit 1)
AC_CHECK_HEADERS(net/if.h,,exit 1)
AC_CHECK_HEADERS(netinet/ip.h,,exit 1)
AC_CHECK_HEADERS(netinet/ip_icmp.h,,exit 1)
AC_CHECK_HEADERS(netinet/tcp.h,,exit 1)
AC_CHECK_HEADERS(netpacket/packet.h,,exit 1)
AC_CHECK_HEADERS(sys/ioctl.h,,exit 1)
AC_CHECK_HEADERS(sys/poll.h,,exit 1)
AC_CHECK_HEADERS(sys/stat.h,,exit 1)
AC_CHECK_HEADERS(sys/un.h,,exit 1)

AC_CONFIG_FILES( Makefile
                 src/Makefile)

AC_OUTPUT
