bin_PROGRAMS = sniffjoke
sniffjoke_SOURCES = sniffjoke.h sniffjoke.cc NetIO.h NetIO.cc SjConf.h SjConf.cc SjList.h Packet.h Packet.cc PacketQueue.h PacketQueue.cc TTLFocus.h TTLFocus.cc TTLFocusList.h TTLFocusList.cc SessionTrack.h SessionTrack.cc SessionTrackList.h SessionTrackList.cc TCPTrack.h TCPTrack.cc Process.h Process.cc

