bin_PROGRAMS = sniffjoke
sniffjoke_SOURCES = sniffjoke.cc defines.h NetIO.h NetIO.cc SjConf.h SjConf.cc SjList.h Packet.h Packet.cc PacketQueue.h PacketQueue.cc TTLFocus.h TTLFocus.cc SessionTrack.h SessionTrack.cc TCPTrack.h TCPTrack.cc Process.h Process.cc Optional_DataDebug.h Optional_DataDebug.cc

