INCLUDE(CheckIncludeFiles)
CHECK_INCLUDE_FILES(malloc.h HAVE_MALLOC_H)
CHECK_INCLUDE_FILES("sys/param.h;sys/mount.h" HAVE_SYS_MOUNT_H)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)

ADD_SUBDIRECTORY(service)
ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(plugins)
ADD_SUBDIRECTORY(autotest)
