bin_PROGRAMS =		sniffjoke

sniffjoke_SOURCES =	hardcoded-defines.h \
			Debug.h \
			Debug.cc \
			Utils.h \
                        HDRoptions.h \
                        HDRoptions.cc \
			Packet.h \
			Packet.cc \
			PacketQueue.h \
			PacketQueue.cc \
			Hack.h \
			HackPool.h \
			HackPool.cc \
			TTLfocus.h \
			TTLfocus.cc \
			SessionTrack.h \
			SessionTrack.cc \
			TCPTrack.h \
			TCPTrack.cc \
			NetIO.h \
			NetIO.cc \
			Process.h \
			Process.cc \
			UserConf.h \
			UserConf.cc \
			SniffJoke.cc \
			SniffJoke.h \
			main.cc

sniffjoke_LDFLAGS =	-lrt -Wl,-export-dynamic
