ADD_EXECUTABLE(sniffjokectl main SniffJokeCli)

SET( PACKAGELIST EVENT )

FOREACH( PACKAGE ${PACKAGELIST} )

    FIND_PACKAGE( ${PACKAGE} REQUIRED )
    MESSAGE( "${PACKAGE}: FOUND" )
    SET( HAVE_LIB${PACKAGE} 1 )
    INCLUDE_DIRECTORIES( ${${PACKAGE}_INCLUDE_DIRS} )
    TARGET_LINK_LIBRARIES( sniffjokectl ${${PACKAGE}_LIBRARY} )
    MESSAGE( STATUS "${PACKAGE} includes: ${${PACKAGE}_INCLUDE_DIRS}" )
    MESSAGE( STATUS "${PACKAGE} libs: ${${PACKAGE}_LIBRARIES}" )

ENDFOREACH(PACKAGE ${PACKAGELIST})

INSTALL(TARGETS sniffjokectl RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
