bin_PROGRAMS =		sniffjoke

sniffjoke_SOURCES =	hardcodedDefines.h \
			Debug.h \
			Debug.cc \
			Utils.h \
			HDRoptions.h \
			HDRoptions.cc \
			Packet.h \
			Packet.cc \
			PacketQueue.h \
			PacketQueue.cc \
			Hack.h \
			Hack.cc \
			HackPool.h \
			HackPool.cc \
			TTLFocus.h \
			TTLFocus.cc \
			SessionTrack.h \
			SessionTrack.cc \
			portConfParsing.h \
			portConfParsing.cc \
			TCPTrack.h \
			TCPTrack.cc \
			NetIO.h \
			NetIO.cc \
			Process.h \
			Process.cc \
			IPList.h \
			IPList.cc \
			UserConf.h \
			UserConf.cc \
			SniffJoke.cc \
			SniffJoke.h \
			main.cc

sniffjoke_LDFLAGS =	-lrt -Wl,-export-dynamic
