bin_PROGRAMS =		sniffjoke

sniffjoke_SOURCES =	hardcodedDefines.h \
			Debug.h \
			Debug.cc \
			Utils.h \
			Utils.cc \
			HDRoptions.h \
			HDRoptions.cc \
			Packet.h \
			Packet.cc \
			PacketQueue.h \
			PacketQueue.cc \
			Plugin.h \
			Plugin.cc \
			PluginPool.h \
			PluginPool.cc \
			TTLFocus.h \
			TTLFocus.cc \
			SessionTrack.h \
			SessionTrack.cc \
			PacketFilter.h \
			PacketFilter.cc \
			TCPTrack.h \
			TCPTrack.cc \
			NetIO.h \
			NetIO.cc \
			Process.h \
			Process.cc \
			IPList.h \
			IPList.cc \
                        PortConf.h \
                        PortConf.cc \
			UserConf.h \
			UserConf.cc \
			SniffJoke.cc \
			SniffJoke.h \
			main.cc

sniffjoke_LDFLAGS =	-lrt -Wl,-export-dynamic
